add iretq gadget

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "ropr"
+name = "kerop"
 version = "0.2.26"
-authors = ["Ben Lichtman"]
+authors = ["Ben Lichtman","Tsune:Yayoi-cs"]
 edition = "2021"
 description = "A blazing fast multithreaded ROP Gadget finder. ropper / ropgadget alternative"
-repository = "https://github.com/Ben-Lichtman/ropr"
+repository = "https://github.com/Yayoi-cs/kerop"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
